--- a/sprawozdanie/spr.tex
+++ b/sprawozdanie/spr.tex
@@ -56,7 +56,12 @@ Celem projektu jest konstrukcja niskobudżetowego uniwersalnego odbiornika fal k
 5. Testy czujnika [przesyłanie sygnału przez indukcję]\\
 6. Testy czujnika w pobliżu burzy, reakcja na wyładowania\\
 7. Próbkowanie sygnały analogowego. Płytka nucleo, schemat + testy (STMStudio).\\
-
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.95\textwidth]{figures/stmstudio.png}
+\caption{STMStudio - obserwacja napięcia na wyjściu wzmacniacza}
+\end{center}
+\end{figure}
 
 \section{Kontynuacja projektu?}
 Co zamierzamy zrobić w najbliższym czasie.
