prawie gotowe sprawko

--- a/sprawozdanie/spr.tex
+++ b/sprawozdanie/spr.tex
@@ -64,14 +64,28 @@
 \end{figure}
 
 \subsection{Skonstruowanie anten kierunkowych}
-\ zdjęcie i podpis Anteny kierunkowe ułożone pod kątem prostym podłączone do prototypu układu\\
-(Nie wiem kto ma anteny :<)
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.95\textwidth]{figures/ukladantena.png}
+\caption{Anteny kierunkowe ułożone pod kątem prostym podłączone do prototypu układu}
+\end{center}
+\end{figure}
 
 \subsection{Testy układu z wyjściem podłączonym do oscyloskopu}
-\ jakieś losowe zdjęcie np. z filmu i podpis Wykrycie wyładowania atmosferycznego przez układ\\
-(Amadeo tu wrzuć klatkę z nagrania bo masz w lepszej jakości)
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.95\textwidth]{figures/oscyloskop.png}
+\caption{Wykrycie wyładowania atmosferycznego przez układ}
+\end{center}
+\end{figure}
 
 \subsection{Próbkowanie sygnału analogowego za pomocą mikrokontrolera STM32 Nucleo}
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.95\textwidth]{figures/uklad.png}
+\caption{Zmontowany układ}
+\end{center}
+\end{figure}
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=0.95\textwidth]{figures/stmstudio.png}
