poprawione stmstudio - brakuje wykresu

--- a/sprawozdanie/spr.tex
+++ b/sprawozdanie/spr.tex
@@ -88,7 +88,7 @@
 \end{figure}
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=0.95\textwidth]{figures/stmstudio.png}
+\includegraphics[width=0.95\textwidth]{figures/stm.png}
 \caption{STMStudio - obserwacja sygnału na wyjściu układu}
 \end{center}
 \end{figure}
